[package]
name = "pop-launcher-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
blocking = "1.3.1"
colorsys = "0.6.7"
futures-lite = "1.13.0"
fuzzy-matcher = "0.3.7"
log = "0.4.19"
mpris = "2.0.1"
notmuch = "0.8.0"
pop-launcher = "1.1.0"
regex = "1.8.4"
serde_json = "1.0.102"
tokio = { version = "1.28.2", features = ["rt", "macros", "process"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
xdg = "2.4.1"
merge = "0.1.0"
async-trait = "0.1.71"
shlex = "1.1.0"
toml = "0.7.6"
home = "0.5.5"
itertools = "0.10.5"
systemd = "0.10.0"
